// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cli-options parseArgs options can be overriden 1`] = `
Object {
  "_": Array [
    "node",
    "pagespeed-score",
    "https://www.google.com",
  ],
  "url": "https://www.google.com",
}
`;

exports[`cli-options parseArgs returns defaults based on argv 1`] = `
Object {
  "_": Array [
    "node",
    "pagespeed-score",
    "https://www.google.com",
  ],
  "benchmark": false,
  "jsonl": false,
  "metrics": Object {
    "benchmark": false,
    "ttfb": false,
    "user-timing-marks": Object {},
    "userTimingMarks": Object {},
  },
  "runs": 9,
  "ttfb": false,
  "url": "https://www.google.com",
  "user-timing-marks": Object {},
  "userTimingMarks": Object {},
  "warmup-runs": 0,
  "warmupRuns": 0,
}
`;
